# hunter

.github/workflows/: ci.yml  set_matrix.py
.github/workflows/ci/: build.cmd  build.sh  matrix.json
_data/projects/: Alut.json  BZip2.json  Boost-useBoostConfig.json  Boost.json  CLI11.json  FLAC.json  GTest.json  ICU.json  Imath.json  Jpeg.json  OpenAL.json  OpenGL-Registry.json  OpenSSL.json  SDL2.json  SDL_image.json  SDL_mixer.json  SDL_net.json  SDL_ttf.json  SFML.json  TIFF.json  WebP.json  aws-sdk-cpp.json  brotli.json  byte-lite.json  complex_bessel.json  doctest.json  fluidsynth.json  freetype.json  giflib.json  harfbuzz.json  hwy.json  ittapi.json  jsoncpp.json  jwt-cpp.json  lcms.json  libmad.json  libogg.json  libuv.json  nlohmann_json.json  opusfile.json  (+5 more)
cmake/configs/: default.cmake
cmake/projects/Boost/ci/: build-add-virtualenv.cmd  build-add-virtualenv.sh  matrix.json
cmake/projects/OpenAL/: hunter.cmake
cmake/projects/SDL2/: hunter.cmake
cmake/projects/SDL_image/: hunter.cmake
cmake/projects/SDL_mixer/: hunter.cmake
cmake/projects/SDL_ttf/: hunter.cmake
cmake/projects/SFML/: hunter.cmake
cmake/projects/brotli/: hunter.cmake
cmake/projects/fluidsynth/: hunter.cmake
cmake/projects/freetype/: hunter.cmake
cmake/projects/hwy/: hunter.cmake
cmake/projects/libmad/: hunter.cmake
cmake/projects/libmad/patches/0.15.1b/: CMakeLists.txt
cmake/projects/libogg/: hunter.cmake
cmake/schemes/: url_sha1_cmake.cmake.in
examples/SDL_mixer/: CMakeLists.txt
examples/brotli/: CMakeLists.txt  boo.cpp
examples/fluidsynth/: CMakeLists.txt  main.cpp
examples/hwy/: CMakeLists.txt  example.cpp
examples/libmad/: CMakeLists.txt  main.cpp
examples/libogg/: CMakeLists.txt
